--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,20 +50,21 @@ android {
 
 dependencies {
 
-    def room_version = "2.4.3"
+    def room_version = "2.5.0"
     def retrofit_version = "2.9.0"
     def okhttp_version = "4.9.0"
     def paging_version = "3.1.1"
+    def nav_version = "2.5.3"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:1.1.1"
+    implementation "androidx.compose.material:material:1.3.1"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
@@ -87,7 +88,7 @@ dependencies {
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'androidx.room:room-ktx:2.5.0'
     kapt "androidx.room:room-compiler:$room_version"
 
     //Glide
@@ -116,4 +117,7 @@ dependencies {
 
     //Paging
     implementation "androidx.paging:paging-runtime:$paging_version"
+
+    //Navigation
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 }
