--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,4 +120,9 @@ dependencies {
 
     //Navigation
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    //Chat
+    implementation "io.getstream:stream-chat-android-compose:5.12.0"
+
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
