--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
     def room_version = "2.5.0"
     def retrofit_version = "2.9.0"
     def okhttp_version = "4.9.0"
