--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
+        compose_version = '1.5.4'
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.4.0'
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.1.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.46.1' apply false
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
